# onyx

./: .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  1-deep-research-report.md  2-deep-research-report.md  AGENTS.md  Onyx Architecture Resolution — All Decisions Locked.md  Onyx UX Specification.md  PLAN.md  README.md  V0-api.md  bunfig.toml  deep-research-report.md  gemini-2.md  package.json  test_perf.sh  test_perf_runner.sh  tsconfig.base.json  turbo.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: android-instrumentation.yml  ci.yml
.jules/: bolt.md  sentinel.md
.sisyphus/: boulder.json  session-report.md
.sisyphus/artifacts/: _draw_editor_mock.py
.sisyphus/drafts/: comprehensive-app-overhaul.md  milestone-canvas-rendering-overhaul.md
.sisyphus/notepads/: README.md  android-architecture-review.md  android-pr1-implementation-plan.md  hilt-migration-3.4.md  home-viewmodel-extraction.md  ink-latency-investigation.md  pdf-test-corpus.md  pdfium-spike-report.md  splash-screen-task-3.5.md
.sisyphus/plans/: V1-Real-Time-Collaboration.md  android-foundation.md  initial-setup.md  (+9 more)
.tmp_apk_meta/: onyx-current.xml  onyx-editor-ui.xml  onyx-ui.xml
apps/android/app/src/main/cpp/: CMakeLists.txt  pdfium_text_jni.cpp  vk_ink_renderer_jni.cpp
convex/: README.md  convex.json  schema.ts
docs/: README.md  device-blocker.md  schema-audit.md
scripts/: README.md  gradlew.js  normalize-myscript-sdk-docs.ps1
tests/: setup.ts
tmp/: build_android.cmd  ktlist.txt  note_editor_ui_dexdump_strings.txt  t.js
(+688 files in other folders)
